# film-finder

./: .gitignore  README.md  app.py  demo_streaming.py  package.json  pyproject.toml  requirements.txt  start.sh  streaming_api.py
.github/: copilot-instructions.md
data/: clean.csv
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: Filters.tsx  MovieCard.tsx  StreamingServices.tsx
frontend/src/types/: Movie.ts
frontend/src/utils/: movieUtils.ts  omdbApi.ts  streamingApi.ts
src/: app.py  utils.py
