[project]
name = "dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.3",
    "pillow>=11.3.0",
    "polars>=1.32.0",
    "simple-justwatch-python-api>=0.16",
]
